--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -22,15 +22,18 @@ jobs:
         run: npm install
 
       - name: Deploy Flagly UI
-        uses: actions/checkout@v3
-        with:
-          use-app-token: true
-          app-token: ${{ secrets.DIGITAL_OCEAN_TOKEN }}
-          organization: ${{ secrets.DIGITAL_OCEAN_DROPLET_ORG }}
-          droplet-id: ${{ secrets.DIGITAL_OCEAN_DROPTLET_IP_ADDRESS }}
-          commands: |
-            cd app/
-            pm2 stop app.js
-            git pull origin master
-            npm install
-            pm2 start app.js
+        run: |
+          # Set DigitalOcean API endpoint and path
+          API_ENDPOINT="https://api.digitalocean.com/v2/droplets/${{ secrets.DIGITAL_OCEAN_DROPLET_ID }}/actions"
+          
+          # Build the JSON payload for the API request
+          PAYLOAD=$(cat <<EOF
+          {
+            "type": "remote",
+            "command": "cd /app && pm2 stop app.js && git pull origin master && npm install && pm2 start app.js"
+          }
+          EOF
+          )
+
+          # Trigger the action on the Droplet using DigitalOcean API
+          curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.DIGITAL_OCEAN_TOKEN }}" -d "$PAYLOAD" "$API_ENDPOINT" 
