--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set Git Config for Pull
-        run: git config pull.rebase true
+        run: git config pull.rebase false
   
       - name: Pull recent code changes
         run: git pull origin master
